# zksync-compiler-solidity

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  README.md  run.sh
.cargo/: config.toml
.github/: CODEOWNERS
.github/workflows/: build_release.yaml
compiler_solidity/: Cargo.toml
compiler_solidity/src/: const.rs  lib.rs
compiler_solidity/src/evm/assembly/instruction/: codecopy.rs
compiler_solidity/src/evm/ethereal_ir/: mod.rs
compiler_solidity/src/evm/ethereal_ir/function/: mod.rs
compiler_solidity/src/evm/ethereal_ir/function/block/element/: mod.rs
compiler_solidity/src/evmla/assembly/: data.rs  mod.rs
compiler_solidity/src/evmla/assembly/instruction/: codecopy.rs  jump.rs  mod.rs  name.rs  stack.rs
compiler_solidity/src/evmla/ethereal_ir/: entry_link.rs  mod.rs
compiler_solidity/src/evmla/ethereal_ir/function/: mod.rs
compiler_solidity/src/evmla/ethereal_ir/function/block/: mod.rs
compiler_solidity/src/evmla/ethereal_ir/function/block/element/: mod.rs
compiler_solidity/src/project/: mod.rs
compiler_solidity/src/project/contract/: mod.rs
compiler_solidity/src/project/contract/source/: evm.rs  mod.rs
compiler_solidity/src/solc/: mod.rs
compiler_solidity/src/solc/combined_json/: mod.rs
compiler_solidity/src/solc/standard_json/output/: mod.rs
compiler_solidity/src/solc/standard_json/output/contract/evm/: mod.rs
compiler_solidity/src/solc/standard_json/output/error/: mod.rs
compiler_solidity/src/solc/standard_json/output/source/ast/: mod.rs
compiler_solidity/src/yul/: error.rs
compiler_solidity/src/yul/lexer/: error.rs  mod.rs
compiler_solidity/src/yul/lexer/token/: location.rs  mod.rs
compiler_solidity/src/yul/lexer/token/lexeme/: identifier.rs  keyword.rs  mod.rs  symbol.rs
compiler_solidity/src/yul/lexer/token/lexeme/comment/: mod.rs  multi_line.rs  single_line.rs
compiler_solidity/src/yul/lexer/token/lexeme/literal/: boolean.rs  integer.rs  mod.rs  string.rs
compiler_solidity/src/yul/parser/: error.rs  identifier.rs  type.rs
compiler_solidity/src/yul/parser/statement/: assignment.rs  block.rs  code.rs  for_loop.rs  function_definition.rs  if_conditional.rs  mod.rs  object.rs  variable_declaration.rs
compiler_solidity/src/yul/parser/statement/expression/: literal.rs  mod.rs
compiler_solidity/src/yul/parser/statement/expression/function_call/: mod.rs  name.rs
compiler_solidity/src/yul/parser/statement/switch/: case.rs  mod.rs
compiler_solidity/src/zksolc/: main.rs
llvm_builder/: Cargo.toml  aarch64_macos.rs  arguments.rs  linux_gnu.rs  linux_musl.rs  macos.rs  main.rs  utils.rs  x86_64_linux_gnu.rs  x86_64_macos.rs
src/evm/assembly/: mod.rs
src/evm/ethereal_ir/: mod.rs
src/project/: mod.rs
src/project/contract/: mod.rs  state.rs
src/solc/combined_json/: contract.rs  mod.rs
src/zksolc/: arguments.rs  main.rs
(+21 files in other folders)
