[package]
name = "llvm-builder"
version = "1.1.1"
authors = [
    "Alex Zarudnyy <a.zarudnyy@matterlabs.dev>",
]
license = "Apache-2.0"
edition = "2021"
description = "The LLVM framework dependency builder"

[[bin]]
name = "llvm-builder"
path = "main.rs"

[dependencies]
anyhow = "1.0"
num_cpus = "1.13"
fs_extra = "1.2"
